[project]
name = "text-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "canturan13", email = "oguzcanturan@jotform.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.83.0",
    "uvicorn==0.17.0",
    "sentence-transformers~=3.2.1",
    "torch (>=2.6.0,<3.0.0)",
    "accelerate~=0.21.0",
    "bitsandbytes~=0.41.3",
    "einops~=0.8.0",
    "huggingface_hub==0.23.5",
    "hypercorn[h3]==0.14.4",
    "hypercorn[trio]==0.14.4",
    "hypercorn[uvloop]==0.14.4",
    "numpy==1.22.0",
    "pathspec==0.9.0",
    "pydantic==1.9.2",
    "python-multipart==0.0.5"
]

packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"